<resources>
    <string name="app_name">CPM</string>
    <string name="enter_passcode">Enter Passcode...</string>
    <string name="empty"></string>
    <string name="incorrect">"Passcode Incorrect, try again."</string>
    <string name="e">E</string>
    <string name="t">T</string>
    <string name="a">A</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="r">R</string>
    <string name="i">I</string>
    <string name="s">S</string>
    <string name="h">H</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="star">*</string>
    <string name="hash">#</string>
    <string name="percent">%</string>
    <string name="at">\@</string>
    <string name="clear">Clear</string>
    <string name="enter">Enter</string>
    <string name="textview">TextView</string>
    <string name="entry_heading"><u>Selected Entry Details</u></string>
    <string name="list_heading"><u>Database Entries</u></string>
    <string name="pair_key">Pair Key : </string>
    <string name="pair_value">Pair Value</string>
    <string name="add_entry">Add Entry...</string>
    <string name="modify_entry">Modify Entry...</string>
    <string name="entry_name">Enter name of Entry...</string>
    <string name="key_hint1">Field 1 heading...</string>
    <string name="val_hint1">Field 1 value...</string>
    <string name="key_hint2">Field 2 heading?</string>
    <string name="val_hint2">Field 2 value?</string>
    <string name="key_hint3">Field 3 heading?</string>
    <string name="val_hint3">Field 3 value?</string>
    <string name="key_hint4">Field 4 heading?</string>
    <string name="val_hint4">Field 4 value?</string>
    <string name="key_hint5">Field 5 heading?</string>
    <string name="val_hint5">Field 5 value?</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add Entry</string>
</resources>
